# splunk-add-on-for-sftp-files-downloader

./: .app-vetting.yaml  .fossa.yml  .gitignore  .semgrepignore  README-test.md  README.md  TA-sftp-files-downloader.aob_meta  app.manifest  pyproject.toml  test_credentials.env
.reuse/: dep5
README/: inputs.conf.spec
default/: app.conf  props.conf  restmap.conf  web.conf
default/data/ui/views/: configuration.xml  inputs.xml
package/: app.manifest
package/default/: app.conf
tests/knowledge/: conftest.py
