[tool.poetry]
name = "splunk-add-on-for-sftp-files-downloader"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"
readme = "README.md"
packages = [{include = "splunk_add_on_for_sftp_files_downloader"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
